[package]
name = "ssg-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1" }
bstr = "1.3"
memchr = "2.5"
fxhash = "0.2"
lazy_static = "1.4"

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
debug-assertions = false
debug = false
codegen-units = 1
lto = "thin"