[package]
name = "ssg_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1" }
memchr = "2.5"
fxhash = "0.2"
lazy_static = "1.4"

[features]
default = ["skip-whitespace"]
skip-whitespace = []

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
debug = false
codegen-units = 1
lto = "thin"

[[bench]]
name = "parsing"